test/corpus/expressions.txt
===========
Expressions
===========

void main() {
    3 + b.c;
    a in b();
    3 = 3;
    x.y.z();
    (3 + 1).to_string();
}

---

(source_file
  (namespace_member
    (method_declaration
      (type)
      (symbol (identifier))
      (block
        (expression_statement
          (arithmetic_expression
            (literal (integer))
            (member_access_expression (member_access_expression (identifier)) (identifier))))
        (expression_statement
          (in_expression 
            (member_access_expression (identifier))
            (method_call_expression (member_access_expression (identifier)))))
        (expression_statement
          (assignment_expression
            (literal (integer))
            (literal (integer))))
        (expression_statement
          (method_call_expression
            (member_access_expression
              (member_access_expression
                (member_access_expression (identifier))
                (identifier))
              (identifier))))
        (expression_statement
          (method_call_expression
            (member_access_expression
              (arithmetic_expression
                (literal (integer))
                (literal (integer)))
              (identifier))))))))
