test/corpus/namespaces.txt
==========
Namespaces
==========

namespace Foo {
}

namespace Foo.Bar {
}

namespace global::Foo.Bar {
}

namespace Foo {
    namespace Bar {
    }
}

---

(source_file
  (namespace_member (namespace_declaration (symbol (identifier))))
  (namespace_member (namespace_declaration (symbol (identifier) (identifier))))
  (namespace_member (namespace_declaration (symbol (identifier) (identifier))))
  (namespace_member
    (namespace_declaration (symbol (identifier))
      (namespace_member
        (namespace_declaration (symbol (identifier)))))))
