test/corpus/using-directives.txt
================
Using directives
================

using A;
using A.B;
using global::A.B;
using A, B;

---

(source_file
 (using_directive
  (symbol (symbol_part (identifier))))
 (using_directive
  (symbol (symbol_part (identifier)) (symbol_part (identifier))))
 (using_directive
  (symbol (symbol_part (identifier)) (symbol_part (identifier))))
 (using_directive
  (symbol (symbol_part (identifier))) (symbol (symbol_part (identifier)))))
